--- a/flight-board-demo-rest-api/src/main/resources/application.properties
+++ b/flight-board-demo-rest-api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/flight_board
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
+
+spring.data.rest.base-path=/api
